Adjusted styling to ensure proper visibility of half leave working hour

--- a/src/index.css
+++ b/src/index.css
@@ -169,3 +169,7 @@ body {
     background-color: #474646;
   }
 }
+
+.rbc-row-segment {
+  height: 0px !important;
+}
